--- a/catalog.html
+++ b/catalog.html
@@ -150,7 +150,7 @@
           <section class="housing-list">
             <div class="housing-list-header">
               <h2 class="housing-list-title">Найдено гостиниц: 38</h2>
-              <select class="housing-list-sort" name="sort">
+              <select class="housing-list-sort" name="sort" aria-label="Сортировка">
                 <option value="cheap">
                   Сначала дешёвые
                 </option>
@@ -162,22 +162,55 @@
                 </option>
               </select>
               <ul class="housing-list-view modified-ul">
-                <li>
-                  <a class="view-cards" href="#">
+                <li class="view-item">
+                  <a class="view-toggle view-toggle-selected" href="#">
+                    <svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="16" height="14" fill="none" viewBox="0 0 16 14">
+                      <g fill="#000" clip-path="url(#a)">
+                        <path d="M4 0H0v6h4V0ZM16 0h-4v6h4V0ZM10 0H6v6h4V0ZM4 8H0v6h4V8ZM16 8h-4v6h4V8ZM10 8H6v6h4V8Z"></path>
+                      </g>
+                      <defs>
+                        <clipPath id="a">
+                          <path fill="#fff" d="M0 0h16v14H0z"></path>
+                        </clipPath>
+                      </defs>
+                    </svg>
                     <span class="visually-hidden">
                       Карточки
                     </span>
                   </a>
                 </li>
-                <li>
-                  <a class="view-individual" href="#">
+                <li class="view-item">
+                  <a class="view-toggle" href="#">
+                    <svg aria-hidden="true" focusable="false" width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <g clip-path="url(#clip0_62787_126)">
+                        <path d="M16 12H0V14H16V12Z" fill="black"></path>
+                        <path d="M14 2V8H2V2H14ZM16 0H0V10H16V0Z" fill="black"></path>
+                      </g>
+                      <defs>
+                        <clipPath id="clip0_62787_126">
+                          <rect width="16" height="14" fill="white"></rect>
+                        </clipPath>
+                      </defs>
+                    </svg>
                     <span class="visually-hidden">
                       По одному
                     </span>
                   </a>
                 </li>
-                <li>
-                  <a class="view-list" href="#">
+                <li class="view-item">
+                  <a class="view-toggle" href="#">
+                    <svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="16" height="14" fill="none" viewBox="0 0 16 14">
+                      <g fill="#000" clip-path="url(#a)">
+                        <path
+                          d="M2 0H0v2h2V0ZM16 0H4v2h12V0ZM2 4H0v2h2V4ZM16 4H4v2h12V4ZM2 8H0v2h2V8ZM16 8H4v2h12V8ZM2 12H0v2h2v-2ZM16 12H4v2h12v-2Z">
+                        </path>
+                      </g>
+                      <defs>
+                        <clipPath id="a">
+                          <path fill="#fff" d="M0 0h16v14H0z"></path>
+                        </clipPath>
+                      </defs>
+                    </svg>
                     <span class="visually-hidden">
                       Список
                     </span>
