add modal window without decorative elements

--- a/catalog.html
+++ b/catalog.html
@@ -29,12 +29,12 @@
           <ul class="navigation-user modified-ul">
             <li class="navigation-user-item">
               <a class="navigation-user-link link-search" href="#">
-                <span class="visually-hidden">Поиск</span>
+                <span class="visually-hidden">Поиск.</span>
               </a>
             </li>
             <li class="navigation-user-item">
               <a class="navigation-user-link link-fav" href="#">
-                <span class="visually-hidden">Избранное</span>
+                <span class="visually-hidden">Избранное.</span>
                 <span class="fav-count">12</span>
               </a>
             </li>
@@ -51,7 +51,7 @@
           <ul class="breadcrumbs modified-ul">
             <li class="breadcrumbs-item">
               <a class="breadcrumbs-link link-main" href="index.html">
-                <span class="visually-hidden">Главная</span>
+                <span class="visually-hidden">Главная.</span>
               </a>
             </li>
             <li class="breadcrumbs-item">
@@ -59,7 +59,7 @@
             </li>
           </ul>
 
-          <h2 class="visually-hidden">Фильтры</h2>
+          <h2 class="visually-hidden">Фильтры.</h2>
           <form class="housing-filter" action="https://echo.htmlacademy.ru/" method="get">
             <fieldset class="filter-facilities">
               <legend class="facilities-title">Инфраструктура:</legend>
@@ -130,17 +130,17 @@
               <div class="price-line">
                 <div class="price-scale">
                   <button class="price-setter set-min">
-                    <span class="visually-hidden">Выбрать минимальную цену</span>
+                    <span class="visually-hidden">Выбрать минимальную цену.</span>
                   </button>
                   <button class="price-setter set-max">
-                    <span class="visually-hidden">Выбрать максимальную цену</span>
+                    <span class="visually-hidden">Выбрать максимальную цену.</span>
                   </button>
                 </div>
               </div>
             </fieldset>
 
             <fieldset class="filter-buttons">
-              <legend class="visually-hidden">Кнопки</legend>
+              <legend class="visually-hidden">Кнопки.</legend>
               <button class="button button-add" type="submit">Применить</button>
               <button class="button button-reset" type="reset">Сбросить</button>
             </fieldset>
@@ -175,9 +175,7 @@
                         </clipPath>
                       </defs>
                     </svg>
-                    <span class="visually-hidden">
-                      Карточки
-                    </span>
+                    <span class="visually-hidden">Карточки.</span>
                   </a>
                 </li>
                 <li class="view-item">
@@ -193,9 +191,7 @@
                         </clipPath>
                       </defs>
                     </svg>
-                    <span class="visually-hidden">
-                      По одному
-                    </span>
+                    <span class="visually-hidden">По одному.</span>
                   </a>
                 </li>
                 <li class="view-item">
@@ -212,9 +208,7 @@
                         </clipPath>
                       </defs>
                     </svg>
-                    <span class="visually-hidden">
-                      Список
-                    </span>
+                    <span class="visually-hidden">Список.</span>
                   </a>
                 </li>
               </ul>
@@ -235,7 +229,7 @@
                 </div>
                 <div class="item-grades">
                   <p class="stars stars-four">
-                    <span class="visually-hidden">Звездность гостиницы: 4 звезды</span>
+                    <span class="visually-hidden">Звездность гостиницы: 4 звезды.</span>
                   </p>
                   <span class="item-grade">Рейтинг: 8,5</span>
                 </div>
@@ -256,7 +250,7 @@
                 </div>
                 <div class="item-grades">
                   <p class="stars stars-four">
-                    <span class="visually-hidden">Звездность гостиницы: 4 звезды</span>
+                    <span class="visually-hidden">Звездность гостиницы: 4 звезды.</span>
                   </p>
                   <span class="item-grade">Рейтинг: 9,2</span>
                 </div>
@@ -276,7 +270,7 @@
                 </div>
                 <div class="item-grades">
                   <p class="stars stars-three">
-                    <span class="visually-hidden">Звездность гостиницы: 3 звезды</span>
+                    <span class="visually-hidden">Звездность гостиницы: 3 звезды.</span>
                   </p>
                   <span class="item-grade">Рейтинг: 6,9</span>
                 </div>
@@ -297,7 +291,7 @@
                 </div>
                 <div class="item-grades">
                   <p class="stars stars-two">
-                    <span class="visually-hidden">Звездность гостиницы: 2 звезды</span>
+                    <span class="visually-hidden">Звездность гостиницы: 2 звезды.</span>
                   </p>
                   <span class="item-grade">Рейтинг: 5,0</span>
                 </div>
@@ -306,7 +300,7 @@
           </section>
 
           <section class="pagination">
-            <h2 class="visually-hidden">Список страниц</h2>
+            <h2 class="visually-hidden">Список страниц.</h2>
             <ul class="pagination-list modified-ul">
               <li class="pagination-item">
                 <a class="pagination-link pagination-prev">1</a>
@@ -322,7 +316,7 @@
               </li>
               <li class="pagination-item">
                 <a class="pagination-link pagination-next" href="#">
-                  <span class="visually-hidden">Промежуточные страницы</span>
+                  <span class="visually-hidden">Промежуточные страницы.</span>
                   ...
                 </a>
               </li>
@@ -345,7 +339,7 @@
         </section>
 
         <section class="footer-social">
-          <h2 class="visually-hidden">Ищите нас в социальных сетях</h2>
+          <h2 class="visually-hidden">Ищите нас в социальных сетях.</h2>
           <ul class="footer-social-list modified-ul">
             <li class="footer-social-item-vk">
               <a class="social-button" href="https://vk.com/htmlacademy">
