add tooltip for kids number in modal

--- a/index.html
+++ b/index.html
@@ -213,6 +213,13 @@
                   </button>
                 </div>
                 <label class="number-kids-label" for="kids">Дети:</label>
+                <button type="button" class="kids-tooltip">
+                  <svg class="tooltip-icon" aria-hidden="true" focusable="false" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="13" cy="13" r="13"></circle>
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M12 7H14V9H12V7ZM14 19H12V10H14V19Z" fill="white"></path>
+                  </svg>
+                  <span class="tooltip-text" id="tooltip-label-date">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
+                </button>
                 <div class="counter-container">
                   <button class="button-minus counter-button" type="button">
                     <span class="visually-hidden">Уменьшить количество детей на 1.</span>
