--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
-    <link rel="stylesheet" href="styles/styles.css"/>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
 
   <body>
@@ -203,7 +203,7 @@
                         </path>
                       </g>
                       <defs>
-                        <clipPath id="a">
+                        <clipPath id="aa">
                           <path fill="#fff" d="M0 0h16v14H0z"></path>
                         </clipPath>
                       </defs>
