--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
-    <link rel="stylesheet" href="styles/styles.css"/>
+    <link rel="stylesheet" href="styles/styles.css">
     <script src="scripts/script.js"></script>
   </head>
 
-  <body>
+  <body class="index">
     <div class="page-container">
       <header class="page-header">
         <nav class="navigation">
