Final project evaluation: corrections after first attempt

--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.ico">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
 
@@ -129,10 +129,10 @@
               </div>
               <div class="price-line">
                 <div class="price-scale">
-                  <button class="price-setter set-min">
+                  <button type="button" class="price-setter set-min">
                     <span class="visually-hidden">Выбрать минимальную цену.</span>
                   </button>
-                  <button class="price-setter set-max">
+                  <button type="button" class="price-setter set-max">
                     <span class="visually-hidden">Выбрать максимальную цену.</span>
                   </button>
                 </div>
@@ -303,7 +303,7 @@
             <h2 class="visually-hidden">Список страниц.</h2>
             <ul class="pagination-list modified-ul">
               <li class="pagination-item">
-                <a class="pagination-link pagination-prev">1</a>
+                <a class="pagination-link pagination-prev" href="#">1</a>
               </li>
               <li class="pagination-item">
                 <a class="pagination-link" href="#">2</a>
